# collage

./: .gitignore  README.md  index.html  init.js  main.js  package.json  release.sh  version.txt  worker.js
image-processor/: .gitignore  Cargo.toml
image-processor/pkg/: image_processor.js  image_processor_bg.wasm
image-processor/src/: algorithm.rs  image_for_processing.rs  layout.rs  lib.rs  main.rs  orientation.rs  renderer.rs
src/: Main.elm
