[package]
name = "image-processor"
version = "0.1.0"
authors = ["Rafał Cieślak <ravicious@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.75"
js-sys = "0.3.51"
kamadak-exif = "0.5.4"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.4"
petgraph = "0.6.0"
itertools = "0.10.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console"
]

[dependencies.image]
version = "0.23.14"
default-features = false
features = ["gif", "jpeg", "png", "webp", "bmp"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

# Uncomment to preserve function names for use with twiggy
# https://github.com/rustwasm/wasm-pack/issues/797#issuecomment-619573355
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = ['-O4', '-g']
